Fixing filtering z-index issue

--- a/components/Filter/_Filter.css
+++ b/components/Filter/_Filter.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     background: white;
+    top: 40px;
     width: 320px;
     height: 286px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
